--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,20 @@
 #ovo.ws.url=http://10.10.10.71:8000/apis/cisco/url
 ovo.ws.url=https://api.ovo-analytics.id/apis/cisco/url
 ovo.ws.auth.basic=Basic Y2lzY286cGFzc3dvcmQxMjM=
-ovo.ws.batch.rows=30
+ovo.ws.batch.rows=100
 
 fmc.fetch.rows=0
-fmc.schedule.delay.seconds=10
 
 fmc.schedule1.delay.seconds=15
 fmc.schedule2.delay.seconds=5
+fmc.schedule3.delay.seconds=10
+fmc.schedule1.disable=false
+fmc.schedule2.disable=false
+fmc.schedule3.disable=true
 
+fmc.fast=false
+
+local.data.keep.days=4
 
 #local.data.ipclientmap=C:/fmc2ovo/ipclientmap.csv
 local.data.ipclientmap=/home/perkasa/ipclientmap.csv
