--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,14 +5,15 @@ ovo.ws.batch.rows=100
 
 fmc.fetch.rows=0
 
-fmc.schedule1.delay.seconds=15
-fmc.schedule2.delay.seconds=5
-fmc.schedule3.delay.seconds=10
-fmc.schedule1.disable=false
-fmc.schedule2.disable=false
-fmc.schedule3.disable=true
+fmc.job1.delay.seconds=15
+fmc.job1.disable=false
 
-fmc.fast=false
+fmc.job2.delay.seconds=5
+fmc.job2.disable=false
+fmc.job2.fast=false
+
+fmc.job3.delay.seconds=10
+fmc.job3.disable=true
 
 local.data.keep.days=4
 
