--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,12 +10,13 @@ fmc.job1.disable=false
 
 fmc.job2.delay.seconds=5
 fmc.job2.disable=false
-fmc.job2.fast=false
+fmc.job2.fast=true
 
 fmc.job3.delay.seconds=10
 fmc.job3.disable=true
 
 local.data.keep.days=4
+local.data.url.sent.max=100
 
 #local.data.ipclientmap=C:/fmc2ovo/ipclientmap.csv
 local.data.ipclientmap=/home/perkasa/ipclientmap.csv
