--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,7 +6,7 @@ ovo.ws.batch.rows=100
 fmc.fetch.rows=0
 
 fmc.job1.delay.seconds=15
-fmc.job1.disable=true
+fmc.job1.disable=false
 
 fmc.job2.delay.seconds=5
 fmc.job2.disable=false
