--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mymysql.datasource.password = P4ssw0rd!!
 mymysql.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto = none
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.database = default
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
